--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,18 @@
-flask
-gunicorn
-tensorflow-cpu
-numpy
-opencv-python
-keras
-opencv-python
+# Core web framework
+flask==3.1.1
+
+# Machine Learning and Deep Learning
+tensorflow==2.19.0
+numpy==2.1.3
+
+# Image processing
+opencv-python==4.11.0.86
+pillow==11.1.0
+
+# Additional dependencies (automatically installed with above, but listed for completeness)
+werkzeug==3.1.3
+jinja2==3.1.6
+markupsafe==3.0.2
+itsdangerous==2.2.0
+click==8.2.1
+blinker==1.9.0
